# imdb_reviews

./: .gitignore  README.md  imdb_reviews.code-workspace  mlruns.db  pyproject.toml
analysis/: analyze.ipynb  verify_processed.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
configs/: data.yaml  params.yaml  paths.yaml
models/: best_catboost_meta_only.cbm  best_catboost_production.cbm  best_ensemble.joblib  best_logreg.joblib  best_mlp.pt  best_tfidf_vectorizer.joblib
pipelines/: 01_run_preprocessing.py  02_train_baseline.py  02_train_catboost_meta.py  03_gen_bert_features.py  03_train_catboost_meta_idf.py  04_gen_bert_head_tail.py  04_train_production.py  05_shap_analysis.py  05_train_logreg_meta_bert.py  06_gen_bert_head_tail.py  06_train_mlp_meta_bert.py  07_train_meta_only.py  07_train_stacking_ensemble.py  08_run_shap_analysis.py  08_train_neural_classifiers.py  run_preprocessing.py
src/imdb/data/: preprocessor.py
src/imdb/evaluation/: shap_utils.py
src/imdb/features/: bert.py  loader.py  text.py
src/imdb/models/: catboost_wrapper.py  pytorch_mlp.py  sklearn_wrapper.py
src/imdb/training/: cv.py
src/imdb/utils/: config.py  logging.py
tests/: conftest.py  test_preprocessing.py
